--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Welcome to Cambodia</h1>
+    <h2>The famous place in Cambodia</h2>
+    <p>Angkor Wat is the most famous place in Cambodia.</p>
     
 </body>
 </html>
